[gd_scene load_steps=3 format=3 uid="uid://65kdix3bjqtj"]

[ext_resource type="Theme" uid="uid://d1jq50hkufdkk" path="res://game/customizer_buttons_theme.tres" id="1"]
[ext_resource type="Script" path="res://game/ui/customizer/TopBarStatbox.gd" id="2"]

[node name="Statbox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 173.0
offset_bottom = 43.0
script = ExtResource("2")

[node name="StatLabelMain" type="Label" parent="."]
layout_mode = 0
offset_left = 65.7029
offset_right = 183.703
offset_bottom = 46.0
theme = ExtResource("1")
theme_override_font_sizes/font_size = 50
text = "40000"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 118.0
offset_bottom = 46.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("1")
theme_override_font_sizes/font_size = 50
text = "ARM"

[node name="IncreaseIndicator" type="Label" parent="."]
layout_mode = 0
offset_top = 25.0
offset_right = 118.0
offset_bottom = 71.0
scale = Vector2(0.4, 0.4)
theme = ExtResource("1")
theme_override_font_sizes/font_size = 50
text = "[+++]"
